<resources>
    <string name="app_name">CPC Appoint</string>
    <string name="rate_us_link">https://play.google.com/store/apps/details?id=com.flipkart.android</string>
    <string name="feedback_email">sample@gmail.com</string>

    <string name="contact_us_details">1.so we welcome you to be a part of our family and fulfill your dreams! so we welcome you to be a part of our family and fulfill your dreams! so we welcome you to be a part of our family and fulfill your dreams! so we welcome you to be a part of our family and fulfill your dreams!</string>
    <string name="home_page_details">1.so we welcome you to be a part of our family and fulfill your dreams!
       \nso we welcome you to be a part of our family and fulfill your dreams!
    </string>


    <string name="contact_us_address"> Aurangabad,\n Maharashtra</string>
    <string name="txt_paid">You have to buy this video</string>


    <string name="about_doctor">Doctor</string>
    <string name="about_doctor_homepage">ABOUT DR</string>
    <string name="about_hospital">Hospital</string>
    <string name="book_appointment">Appointment</string>
    <string name="contact">Contact</string>
    <string name="aboutdoctor">About Doctor</string>
    <string name="abouthospital">About Hospital</string>
    <string name="notification">Notifications</string>
    <string name="recent_notification">Recent Notifications</string>
    <string name="congratulations">Congratulations!\n your appointment is confirmed</string>
    <string name="terms">Appointment Terms and conditions!</string>
    <string name="checkappointment">Check Appointment Availabity!</string>
    <string name="appointmentbooking">Appointment Booking!</string>
    <string name="about_doctor_home">About Kulkarni Hospital</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="appointment_slot">Appointment Slot:</string>
    <string name="available_appointment">Available Appointments</string>
    <string name="view">view</string>
    <string name="hometext">Your target for today is to keep positive\n mindset and smile to everyone you meet"</string>
    <string name="name">Name</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Reserve_Appointment">Reserve Appointment</string>
    <string name="Home">Home</string>
    <string name="PatientName">Patient Name:</string>
    <string name="PatientContact">Patient Contact:</string>
    <string name="available">Available</string>
    <string name="view3">VIEW</string>
    <string name="recent_notifications2">Recent Notifications</string>
    <string name="errorphone">Enter proper name</string>
    <string name="enterphone">Enter proper mobile number</string>
    <string name="interneterror">Please Check Internet Connection</string>
    <string name="noapointment">No Apointments Available</string>
    <string name="select_language">Select language</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="nonotification">No Notification Available</string>
    <string name="by_dr_chapalgaonkar">By Dr. Chapalgaonkar</string>
    <string name="cpc_appointment">CPC Appointment</string>
    <string name="book_an_appointment">Book an Appointment</string>


</resources>
