<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-8dp"
            android:background="@drawable/gradient"
            android:gravity="top">

            <RelativeLayout
                android:id="@+id/originalToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_openDrawer"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/ic_menu_black_24dp"
                    android:backgroundTint="@color/colorWhite"
                    android:visibility="visible"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/sliderlayout"
            android:background="@color/colorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/appBarLayout">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.daimajia.slider.library.Indicators.PagerIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"/>

        </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_notification"
        android:textColor="@color/colorBlack"
        android:background="@color/white"
        android:textSize="15dp"
        android:id="@+id/title1"
        android:layout_below="@+id/sliderlayout"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_job_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title1">

        </androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_doctor_home"
        android:textColor="@color/colorBlack"
        android:background="@color/white"
        android:textSize="15dp"
        android:id="@+id/title2"
        android:layout_below="@+id/rv_job_alert"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_details"
        android:textColor="@color/colorPrimary"
        android:background="@color/white"
        android:textSize="12dp"
        android:id="@+id/title4"
        android:layout_below="@+id/title2"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_10"
        android:drawableLeft="@drawable/ic_alarm_add_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="15dp"
        android:layout_alignParentBottom="true"
     />

</RelativeLayout>

</layout>