<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/toolbar_background">

        <LinearLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/back_about"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:background="@drawable/ic_arrow_back"
                    android:backgroundTint="@color/white" />




            </RelativeLayout>

            <!--region tab-->
            <!--  <include layout="@layout/custom_tab_layout"/>-->

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/cv_background"
        android:layout_below="@+id/toolbar"
        android:id="@+id/rl1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textColor="@color/white"
            android:textSize="@dimen/padding_20"
            android:id="@+id/tv_name"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_name"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:cardCornerRadius="@dimen/padding_20"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="@dimen/padding_10"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Appointment Booking "
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:id="@+id/tv_booking"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="100dp"

                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name: Abhijeet "
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:id="@+id/tv_patient_name"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_below="@+id/tv_booking"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact: +1111111111 "
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:id="@+id/tv_patient_contact"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_below="@+id/tv_patient_name"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date: 20-03-2020"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/colorWhite"
                    android:textSize="15dp"
                    android:id="@+id/tv_date"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_below="@+id/tv_patient_contact"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Slot: 9.00 A.M. to 12.00 P.M."
                    android:textColor="@color/colorPrimary"
                    android:background="@color/colorWhite"
                    android:textSize="15dp"
                    android:id="@+id/tv_slot"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_below="@+id/tv_date"
                    />
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button_background"
                    android:text="Home"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_slot"
                    android:layout_marginTop="30dp"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textColor="@color/colorPrimary"
        android:textSize="12dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rl1"
        android:layout_marginTop="@dimen/padding_20"
        android:id="@+id/terms"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_details"
        android:textColor="@color/colorPrimary"
        android:textSize="12dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/terms"
        android:layout_marginTop="5dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"

        />


</RelativeLayout>

